# edge-system-checker

./: .gitattributes  .gitignore  CAMERA_MODE_GUIDE.md  CHANGELOG.md  DETAILED_REPORT_EXAMPLE.md  DISTRIBUTION_COMPLETE.md  DISTRIBUTION_README.md  H264_DECODING_ERROR_FIX.md  INSTALL_PACKAGES.sh  KOREAN_ALIGNMENT_FIX.md  QUICK_REFERENCE.md  README.md  TABLE_BORDER_FIX_SIMPLE.md  UPDATE_SIMPLIFIED.md  UPS_AND_TABLE_FIX.md  VIDEO_ERROR_SUPPRESSION_AND_FAIL_DETAILS.md  check_edge_status.sh  check_packages.py  checker.py  complete_install.sh  edge-system-checker.desktop  env.example  install_desktop_icon.sh  pyproject.toml  requirements.txt  run_edge_checker.sh  test_system_module.py
checks/: camera_check.py  nas_check.py  system_check.py  ups_check.py
doc/: CAMERA_TABLE_ALIGNMENT_FIX.md  FINAL_UPDATES.md  FRESH_INSTALL_GUIDE.md  FULL_SYSTEM_TEST_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  IP_ADDRESS_VALIDATION.md  IP_FILTER_AND_TABLE_IMPROVEMENT.md  NAS_CHECK_IMPROVEMENT.md  NAS_CHECK_V2_IMPROVEMENTS.md  NEW_SERVER_INSTALL_SUMMARY.md  PORT_FALLBACK_UPDATE.md  QUICK_INSTALL.md  SYSTEM_CHECK_UPDATE.md  TABLE_BORDER_FINAL_FIX.md  UPDATE_COMPLETE_v2.1.md  UPDATE_DETAILED_SYSTEM_REPORT.md  UPLOAD_SUCCESS.md  nut_setting.sh  prd.md
utils/: reporter.py  ui.py
