[project]
name = "edge-system-checker"
version = "2.1.0"
description = "Edge 시스템 종합 점검 도구 - UPS, 카메라, NAS, 시스템 자동 점검"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Edge System Checker Team"}
]

dependencies = [
    "opencv-python==4.8.1.78",
    "numpy<2.0",
    "paramiko==3.4.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "colorama==0.4.6",
]

[project.scripts]
edge-checker = "checker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
# 로컬 개발 시 사용 가능
# edge-system-checker = { path = "." }

[project.optional-dependencies]
dev = []

