# UV를 위한 pyproject.toml
# UV를 pip 대신 사용하여 빠르게 패키지를 설치합니다.

[project]
name = "edge-system-checker"
version = "2.1.0"
description = "Edge 시스템 종합 점검 도구"
requires-python = ">=3.11"

dependencies = [
    "opencv-python==4.8.1.78",
    "numpy<2.0",
    "paramiko==3.4.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "colorama==0.4.6",
]

[tool.uv]
dev-dependencies = []

# 빌드 설정 없음 - 스크립트로만 실행

